--- a/TODO
+++ b/TODO
@@ -1,8 +1,26 @@
 ==== TODO ====
 
-* Bookmarklet to add "reset fields" button for search
-* Fix linkify to retain red highlighting on blocked machine IDs (possibly using wrapInner() with a callback function)
-* Enhance linkify per Jules' suggestions: under user history, black number = all ads ever; green number = live + pending; red number = blocked + admin deleted
 * Add "block all images" link in right sidebar
 * Show some some indication on featured ads from first-time posters
-* Highlight ads from free email domains (hotmail.*, yahoo.*, gmail.com, live.com)
+* Highlight ads from freemail accounts (bad!):
+  * hotmail.*
+  * yahoo.*
+  * gmail.com
+  * live.com
+  * y7mail.com
+* Highlight ads from paid/ISP accounts (good!):
+  * bigpond.com
+  * dodo.co.au
+  * iinet.com.au
+  * tpg.com.au
+  * optus.com.au
+  * westnet.com.au
+  * iprimus.com.au
+  * internode.com.au
+* Bookmarklet to add "reset fields" button for search
+
+
+==== DONE ====
+
+* Fix linkify to retain red highlighting on blocked machine IDs (possibly using wrapInner() with a callback function)
+* Enhance linkify per Jules' suggestions: under user history, black number = all ads ever; green number = live + pending; red number = blocked + admin deleted
