--- a/TODO
+++ b/TODO
@@ -1,26 +1,14 @@
 ==== TODO ====
 
+* Performance optimization (should be usable on 200-result page in Chrome and FF)
 * Add "block all images" link in right sidebar
 * Show some some indication on featured ads from first-time posters
-* Highlight ads from freemail accounts (bad!):
-  * hotmail.*
-  * yahoo.*
-  * gmail.com
-  * live.com
-  * y7mail.com
-* Highlight ads from paid/ISP accounts (good!):
-  * bigpond.com
-  * dodo.co.au
-  * iinet.com.au
-  * tpg.com.au
-  * optus.com.au
-  * westnet.com.au
-  * iprimus.com.au
-  * internode.com.au
 * Bookmarklet to add "reset fields" button for search
 
 
 ==== DONE ====
 
-* Fix linkify to retain red highlighting on blocked machine IDs (possibly using wrapInner() with a callback function)
+* Fix linkify to retain red highlighting on blocked machine IDs
 * Enhance linkify per Jules' suggestions: under user history, black number = all ads ever; green number = live + pending; red number = blocked + admin deleted
+* Highlight ads from freemail accounts (bad!)
+* Highlight ads from paid/ISP accounts (good!)
