Give README some Github-friendly formatting

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-==== Belen Bookmarklets, by Sylvan Mably ====
+#### Belen Bookmarklets, by Sylvan Mably
 This is a collection of bookmarklets that make Belen more usable.
 
 There is some documentation in the main file, index.html. Mostly, these are
